# model-collapse-playground

./: .gitignore  LICENSE  README.md  pyproject.toml
src/collapse_playground/models/: vae.py
