[project]
name = "collapse-playground"
version = "0.1.0"
description = "Interactive playground to observe how generative models degrade when retrained on their own outputs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Bora Balcı" }
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "Pillow>=10.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
]
dashboard = [
    "streamlit>=1.30",
    "requests>=2.31",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.3",
    "black>=24.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "N"]
ignore = ["E501"]